--- a/ergogen/config.yaml
+++ b/ergogen/config.yaml
@@ -3,6 +3,8 @@ points:
         padding: cy
     zones:
         main:
+            anchor:
+                shift: [100, -100]
             rows:
                 bottom:
                     row_net: P7
@@ -208,7 +210,7 @@ pcbs.josukey:
             layer: Eco1.User
     footprints:
         diode:
-            what: sod-123w
+            what: sod-123w_copy #sod-123w
             where: true
             params:
                 from: "{{name}}"
