--- a/ergogen/config.yaml
+++ b/ergogen/config.yaml
@@ -210,7 +210,7 @@ pcbs.josukey:
             layer: Eco1.User
     footprints:
         diode:
-            what: sod-123w_copy #sod-123w
+            what: sod-123w_copyV2 #sod-123w
             where: true
             params:
                 from: "{{name}}"
